# disc

./: .pre-commit-config.yaml  README.md
.github/workflows/: docker-publish.yml
DISC Window/: platformio.ini
DISC Window/src/: CTeensy4Controller.h  logging.cpp  logging.h  main.cpp
Window/src/: logging.cpp
neon/: platformio.ini
neon/src/: logging.cpp  main.cpp
sewer/: platformio.ini
sewer/include/: CTeensyLCController.h  logging.h
sewer/src/: main.cpp
siren/airRaidSiren01/: airRaidSiren01.ino
tv/: charmap.txt  genchars.sh
tv/src/: ArcadeFont.h  BigSkull.h  CompositeGraphics.h  CompositeOutput.h  Font.h  Image.h  Matrix.h  Mesh.h  TriangleTree.h  dragon.h  main.cpp  theman.h
website/: Dockerfile  README.md  disc.db  disc.db.2022  disc.test.db  pyproject.toml  requirements.txt  settings.toml  setup.py  wsgi.py
website/disc_web/: base.py  disc.test.db  models.py
website/disc_web/ext/: commands.py
website/disc_web/ext/web/: __init__.py  views.py
website/disc_web/ext/web/static/css/: 98.css  bait.css  egggame.css  home.css  main.css
website/disc_web/ext/web/static/images/: logo.xcf  one.xcf  two.xcf
website/disc_web/ext/web/static/js/: customPopup.js  egggame.js  wipeout-minimal.js  wipeout-minimal.wasm
website/disc_web/ext/web/templates/: bait.html  egggame.html  guestbook.html  home.html  index.html  wipeout.html
window/: platformio.ini
window/include/: Addressing.h  CTeensy4Controller.h  ColorPalette.h  ColorPallete.h  Disc.h  DrawingFrame.h  Frame.h  FreeRam.h  GammaCorrection.h  Geometry.h  Logging.h  MovingCar.h  PayphoneLight.h  (+2 more)
(+38 files in other folders)
